--- a/docs/arithmetic/01divNumbers/div-numers-intro.mdx
+++ b/docs/arithmetic/01divNumbers/div-numers-intro.mdx
@@ -1,9 +1,85 @@
 ---
 id: introTodivNumbers
 slug: /modul-deliteli-i-kratnye
-title: Обзор темы
+title: Делимость натуральных чисел
+hide_table_of_contents: true
 ---
 
+---
+В этом разделе вы познакомитесь с важными математическими понятиями, которые помогут вам лучше понимать деление чисел.
 
-fgfgfg
+#### Что вы узнаете:
 
+- Как находить делители и кратные чисел.
+- Основные свойства делимости.
+
+#### Почему это важно:
+
+- Эти знания необходимы для успешного освоения школьной математики.
+- Они особенно важны для решения задач повышенной сложности, таких как задание №19 на ЕГЭ.
+- Понимание темы поможет вам успешно участвовать в математических олимпиадах. 🏆
+
+#### Как это поможет вам:
+
+- Изученные понятия станут прочной базой для решения сложных задач.
+- Вы будете лучше подготовлены к экзаменам  по математике. ✏️
+- Вы сможете быстрее и рациональнее выполнять вычисления.
+
+---
+
+1. [Делители и кратные](/docs/deliteli-i-kratnye)➗
+
+**Теория:** Узнаем, что такое делитель и кратное числа, и как определять их для различных чисел.
+
+**Практика:** Задания помогут вам научиться находить делители и кратные чисел, что пригодится в дальнейших разделах математики. 
+
+2. [Свойства делимости чисел](/docs/svojstva-delimosti-chisel) 🔢
+
+**Теория:** Рассмотрим основные свойства делимости, которые помогают быстро и эффективно находить делители и кратные.
+
+**Практика:** Закрепим эти свойства на примерах. 
+
+3. [Простые и составные числа](/docs/prostye-i-sostavnye-chisla) 🟢🔴
+
+**Теория:** Разберем, какие числа называются простыми, а какие составными, и как их различать.
+
+**Практика:** Применим знания на уроках и в домашних заданиях для решения задач. 
+
+4. [Наибольший общий делитель](/docs/naibolshij-obshchij-delitel) 🧩
+
+**Практика:** Научимся находить НОД чисел, что важно для решения задач, где требуется найти общие делители. 
+
+5. [Наименьшее общее кратное](/docs/naimenshee-obshchee-kratnoe) 🔄
+
+**Практика:** Узнаем, как находить НОК чисел, что пригодится при решении задач на совместные действия с несколькими числами. 
+
+
+Эти темы являются основой школьной математики и помогут вам лучше понимать и решать математические задачи, а также подготовиться к дальнейшему изучению более сложных тем. 🌟
+
+---
+
+### Дорожная карта темы "Делимость натуральных чисел"
+
+```mermaid
+
+stateDiagram-v2
+  state "<b><a href ='/docs/deliteli-i-kratnye'> Делители и кратные</a></b><ul><li>делитель;</li><li>кратное;</li><li>чётные и нечётные числа.</li> </ul>" as s1
+
+  state "<b><a href ='/docs/svojstva-delimosti-chisel'> Свойства делимости</a></b><ul><li>делится нацело;</li><li>делимость произведения;</li><li>делимость суммы.</li> </ul>" as s2
+  state "<b><a href ='/docs/prostye-i-sostavnye-chisla'> Простые и составные числа</a></b><ul><li>простое число;</li><li>составное число;</li><li>разложение числа на простые множители.</li> </ul>" as s3
+   state "<b><a href ='/docs/naibolshij-obshchij-delitel'>Наибольший общий делитель</a></b><ul><li>наибольший общий делитель (НОД);</li><li>нахождение НОД;</li><li>взаимно простые числа.</li> </ul>" as s4
+   state "<b><a href ='/docs/naibolshij-obshchij-delitel#vd'>Взаимно простые числа и признаки делимости</a></b>" as s5
+   state "<b><a href ='/docs/naimenshee-obshchee-kratnoe'>Наименьшее общее кратное</a></b><ul><li>наименьшее общее кртаное (НОК);</li><li>нахождение НОК;</li><li>НОК взаимно простых чисел.</li> </ul>" as s6
+  direction TB
+  s1 --> s2
+  s1 --> s3 : базовый уровень
+  direction TB
+  s2 --> s3
+  s3 --> s4
+   s4 --> s5
+  s5 --> s6
+  s4 --> s6 : базовый уровень
+
+
+
+```
