--- a/docs/geometry/inscribed-quadrilateral/02four_dot.mdx
+++ b/docs/geometry/inscribed-quadrilateral/02four_dot.mdx
@@ -1,6 +1,7 @@
 ---
 title: Четыре точки на окружности
 id: doc2
+slug: /chetyre-tochki-na-okruzhnosti
 ---
 
 import Image from '@theme/IdealImage';
@@ -107,7 +108,7 @@ import ExpandMoreIcon from '@mui/icons-material/ExpandMore';
   $AKBD$ вписанный.
 </p>
 
-[Отсюда](doc1#pr) $\angle D + \angle K = 180^0  \Rightarrow \angle K = 180^0 - \alpha$.
+[Отсюда](/docs/vpisannyj-chetyryohugolnik#pr) $\angle D + \angle K = 180^0  \Rightarrow \angle K = 180^0 - \alpha$.
 
 <p>
   Имеем: $\angle K + \angle C = 180^0$, следовательно,
