--- a/docs/geometry/solution-right-triangles/01metricratios.mdx
+++ b/docs/geometry/solution-right-triangles/01metricratios.mdx
@@ -2,6 +2,7 @@
 id: doc1
 title: Метрические соотношения в прямоугольном треугольнике
 keywords: [проекции катетов на гипотенузу]
+slug: /solution-right-triangles
 pagination_prev: null
 ---
 
