Commit for update

--- a/docs/arithmetic/02commonFraction/02divisionAndFractions.mdx
+++ b/docs/arithmetic/02commonFraction/02divisionAndFractions.mdx
@@ -2,6 +2,7 @@
 id: doc2
 slug: /delenie-i-drobi
 title: Деление и дроби
+hide_title: true
 keywords:
   [
     доля числа,
@@ -20,6 +21,9 @@ import AccordionDetails from '@mui/material/AccordionDetails';
 import AccordionSummary from '@mui/material/AccordionSummary';
 import Typography from '@mui/material/Typography';
 import ExpandMoreIcon from '@mui/icons-material/ExpandMore';
+
+
+
 
 ## Дробь как результат деления
 
@@ -75,7 +79,7 @@ import ExpandMoreIcon from '@mui/icons-material/ExpandMore';
   </TabItem>
   </Tabs>
 
-<hr />
+
 
 :::tip Обратите внимание
 Любое целое число можно записать как дробь с любым натуральным знаменателем. Числитель такой дроби должен быть равен произведению знаменателя на это число:
@@ -87,7 +91,7 @@ import ExpandMoreIcon from '@mui/icons-material/ExpandMore';
 
 $$5=\dfrac{5}{1}=\dfrac{10}{2}=\dfrac{15}{3}=...\:; \\~\\  7= \dfrac{7}{1}=\dfrac{14}{2}=\dfrac{21}{3}=...\:.$$
 
-
+---
 
 ## Какую часть одно число составляет от другого
 
