--- a/docs/geometry/inscribed-quadrilateral/02four_dot.mdx
+++ b/docs/geometry/inscribed-quadrilateral/02four_dot.mdx
@@ -16,7 +16,7 @@ import ExpandMoreIcon from '@mui/icons-material/ExpandMore';
 ### Всегда ли четыре точки лежат на окружности?
 
 Как известно, около `любого треугольника` можно провести окружность, следовательно, через любые три точки, `не лежащие на одной прямой`, можно провести единственную окружность.
-А вот четыре точки не всегда принадлежат одной окружности, так как [не любой четырёхугольник](doc1) можно вписать в окружность.
+А вот четыре точки не всегда принадлежат одной окружности, так как [не любой четырёхугольник](/docs/vpisannyj-chetyryohugolnik) можно вписать в окружность.
 
 
 
@@ -50,7 +50,7 @@ import ExpandMoreIcon from '@mui/icons-material/ExpandMore';
 :::info признаки
 Четыре точки $A,B,C,D$ принадлежат данной окружности, если для них, как для вершин четырёхугольника $ABCD$, выполняется любое равенство:
 
-1. $\angle A +\angle C =180^0$ ([признак вписанного четырёхугольника](doc1#pr)).
+1. $\angle A +\angle C =180^0$ ([признак вписанного четырёхугольника](/docs/vpisannyj-chetyryohugolnik#pr).
 2. $\angle ACB = \angle ADB$ (отрезок $AB$ виден под одним углом из двух точек).
 
 :::
@@ -220,4 +220,4 @@ import ExpandMoreIcon from '@mui/icons-material/ExpandMore';
 
 ### Ресурсы
 
-Метод вспомогательной окружности всегда подразумевает вписанный четырёхугольник, поэтому для закрепления этой темы решайте задачи блока ["Вписанный четырёхугольник"](doc1#res)
+Метод вспомогательной окружности всегда подразумевает вписанный четырёхугольник, поэтому для закрепления этой темы решайте задачи блока ["Вписанный четырёхугольник"](/docs/vpisannyj-chetyryohugolnik#res)
