Test image responsive

--- a/docs/geometry/stereo-basic/01axiom.mdx
+++ b/docs/geometry/stereo-basic/01axiom.mdx
@@ -45,7 +45,7 @@ import ExpandMoreIcon from '@mui/icons-material/ExpandMore';
 <Image
   alt=""
     img={require('./assets/stereo6.png')}
-  style={{ width: '50%' }}
+   className="responsive-img-40"
 />
 </div>
 
@@ -61,7 +61,7 @@ import ExpandMoreIcon from '@mui/icons-material/ExpandMore';
 <Image
   alt=""
     img={require('./assets/stereo7.png')}
-  style={{ width: '50%' }}
+  className="responsive-img-40"
 />
 </div>
 
@@ -80,7 +80,7 @@ import ExpandMoreIcon from '@mui/icons-material/ExpandMore';
 <Image
   alt=""
     img={require('./assets/stereo8.png')}
-  style={{ width: '50%' }}
+  className="responsive-img-40"
 />
 </div>
 
@@ -103,7 +103,7 @@ import ExpandMoreIcon from '@mui/icons-material/ExpandMore';
 <Image
   alt=""
     img={require('./assets/stereo9.png')}
-  style={{ width: '50%' }}
+  className="responsive-img-40"
 />
 </div>
 
@@ -120,7 +120,7 @@ import ExpandMoreIcon from '@mui/icons-material/ExpandMore';
 <Image
   alt=""
     img={require('./assets/stereo10.png')}
-  style={{ width: '50%' }}
+  className="responsive-img-40"
 />
 </div>
 
