--- a/docs/geometry/stereo-basic/001vvedenie.mdx
+++ b/docs/geometry/stereo-basic/001vvedenie.mdx
@@ -40,7 +40,7 @@ import ExpandMoreIcon from '@mui/icons-material/ExpandMore';
 <Image
   alt=""
     img={require('./assets/stereo1.png')}
-  style={{ width: '50%' }}
+  className="responsive-img-40"
 />
 </div>
 
@@ -61,7 +61,7 @@ import ExpandMoreIcon from '@mui/icons-material/ExpandMore';
 <Image
   alt=""
     img={require('./assets/stereo2.png')}
-  style={{ width: '50%' }}
+  className="responsive-img-40"
 />
 </div>
 
@@ -75,7 +75,7 @@ import ExpandMoreIcon from '@mui/icons-material/ExpandMore';
 <Image
   alt=""
     img={require('./assets/stereo3.png')}
-  style={{ width: '50%' }}
+  className="responsive-img-40"
 />
 </div>
 
@@ -91,7 +91,7 @@ import ExpandMoreIcon from '@mui/icons-material/ExpandMore';
 <Image
   alt=""
     img={require('./assets/stereo4.png')}
-  style={{ width: '50%' }}
+  className="responsive-img-40"
 />
 </div>
 
@@ -106,6 +106,6 @@ import ExpandMoreIcon from '@mui/icons-material/ExpandMore';
 <Image
   alt=""
     img={require('./assets/stereo5.png')}
-  style={{ width: '50%' }}
+  className="responsive-img-40"
 />
 </div>
