Fix broken links

--- a/docs/geometry/inscribed-quadrilateral/02four_dot.mdx
+++ b/docs/geometry/inscribed-quadrilateral/02four_dot.mdx
@@ -178,7 +178,7 @@ import ExpandMoreIcon from '@mui/icons-material/ExpandMore';
 </div>
 
 
-        Рассмотрим четырёхугольник $ACNH$. Сумма противолежащих углов: $\angle C + \angle H =180^0$. Следовательно,  этот четырёхугольник можно вписать в окружность (<a href="doc1#pr">признак </a>).<br />
+        Рассмотрим четырёхугольник $ACNH$. Сумма противолежащих углов: $\angle C + \angle H =180^0$. Следовательно,  этот четырёхугольник можно вписать в окружность (<a href="/docs/vpisannyj-chetyryohugolnik#pr">признак </a>).<br />
         Углы $CAN$ и $CHN$ являются вписанными, опирающимися на одну и ту же дугу $CN$, следовательно, $\angle CAN = \angle CHN$.
       </AccordionDetails>
     </Accordion>
