add ideas of property

--- a/docs/algebra/logarifm/doc2.mdx
+++ b/docs/algebra/logarifm/doc2.mdx
@@ -125,11 +125,19 @@ $$
 
 ### Основные свойства логарифма
 
-:::info Логарифм произведения
+Для всех приведенных ниже свойств предполагается, что $x>0, y>0, a>0, a \neq 1, m>0, m \neq 1$.
 
-Если $\begin{cases} x>0, \\ y>0, \\ a>0, \\ a \neq 1. \end{cases}$, то выполняется равенство $$ \log_{a}xy=\log_{a}x+\log_{a}y$$
 
-Кратко формулируем: *логарифм произведения равен сумме логарифмов*.
+<br/>
+
+:::tip Свойства логарифма
+
+ 01. $$ \log_{a}xy=\log_{a}x+\log_{a}y$$  (*логарифм произведения равен сумме логарифмов*).
+02. $$ \log_{a}\cfrac{x}{y}=\log_{a}x-\log_{a}y$$  (*логарифм частного равен разности логарифмов*).
+03. $$\log_ax^k=k\log_ax$$  (*вынесение показателя степени из аргумента логарифма*).
+04. $$\log_ab=\cfrac{\log_mb}{\log_ma}$$ (*переход от одного основания к другому*).
+05. $$\log_ab=\cfrac{1}{\log_ba}$$. 
+06. $$\log_{a^{n}}b=\cfrac{1}{n}\log_ab$$.
 
 :::
 
@@ -141,7 +149,7 @@ $$
     id="panel1a-header"
   >
     <Typography>
-      <b>Доказательство</b>
+      <b>Доказательство свойства #1</b>
     </Typography>
   </AccordionSummary>
   <AccordionDetails>
@@ -161,3 +169,146 @@ $$
      </Typography>
   </AccordionDetails>
 </Accordion>
+
+
+<br />
+
+<Accordion>
+  <AccordionSummary
+    expandIcon={<ExpandMoreIcon />}
+    aria-controls="panel1a-content"
+    id="panel1a-header"
+  >
+    <Typography>
+      <b>Доказательство свойства #3</b>
+    </Typography>
+  </AccordionSummary>
+  <AccordionDetails>
+    <Typography>
+
+Рассмотрим выражения: $a^{\log_ax^k}$ и $a^{k\log_ax}$. Докажем, что они равны.
+
+Имеем: $a^{\log_ax^k}=x^k;$
+
+$a^{k\log_ax}=\left(a^{\log_ax} \right)^k=x^k$.
+
+Следовательно, $a^{\log_ax^k}=a^{k\log_ax}$. Поскольку степени с одинаковым основанием равны, равны и их показатели. 
+
+Таким образом, получаем: $\log_ax^k=k\log_ax$.
+
+     </Typography>
+  </AccordionDetails>
+</Accordion>
+
+<br/>
+
+
+
+
+---
+
+<br/>
+
+
+
+
+
+
+
+<Tabs>
+  <TabItem value="Пример 1" label="Пример №1" default>
+ Вычислить $\log_63+\log_62$.
+
+ <Accordion>
+  <AccordionSummary
+    expandIcon={<ExpandMoreIcon />}
+    aria-controls="panel1a-content"
+    id="panel1a-header"
+  >
+    <Typography>
+      <b>Решение</b>
+    </Typography>
+  </AccordionSummary>
+  <AccordionDetails>
+    <Typography>
+
+$\log_63+\log_62=\log_66=1$
+
+
+    </Typography>
+  </AccordionDetails>
+</Accordion>
+
+  </TabItem>
+<TabItem value="Пример №2" label="Пример №2">
+   Вычислить $\cfrac{\log_5{64}}{\log_54}$.
+<Accordion>
+  <AccordionSummary
+    expandIcon={<ExpandMoreIcon />}
+    aria-controls="panel1a-content"
+    id="panel1a-header"
+  >
+    <Typography>
+      <b>Решение</b>
+    </Typography>
+  </AccordionSummary>
+  <AccordionDetails>
+    <Typography>
+
+$\cfrac{\log_5{64}}{\log_54}=\log_464=3$
+    </Typography>
+  </AccordionDetails>
+</Accordion>
+  </TabItem>
+
+<TabItem value="Пример №3" label="Пример №3">
+   Вычислить $2\lg 5 + \cfrac12 \lg 16$.
+<Accordion>
+  <AccordionSummary
+    expandIcon={<ExpandMoreIcon />}
+    aria-controls="panel1a-content"
+    id="panel1a-header"
+  >
+    <Typography>
+      <b>Решение</b>
+    </Typography>
+  </AccordionSummary>
+  <AccordionDetails>
+    <Typography>
+
+$2\lg 5 + \cfrac12 \lg 16 = \lg 25 + \lg 4 = \lg 100 =2$
+    </Typography>
+  </AccordionDetails>
+</Accordion>
+  </TabItem>
+
+</Tabs>
+
+---
+
+### Идеи и алгоритмы решения задач
+
+Успешное вычисление логарифмических выражений основывается на:
+
+- 📚 прочном знании свойств логарифмов;
+- 🔧 владении общими приемами их преобразования, которые укрепляются через регулярную практическую работу.
+
+Основные логарифмические формулы удобно разделить на две группы: _формулы упаковки_ и _формулы распаковки_. Эти термины наглядно отражают процесс преобразования логарифмических выражений.
+
+
+| **Формулы упаковки**<br />              |**Формулы распаковки**                 |
+|:---------------------------------------:|:-------------------------------------:|
+| $\log_ax+\log_ay=\log_axy$              | $\log_axy=\log_ax+\log_ay$           |    
+| $\log_{a}x-\log_{a}y=\log_{a}\cfrac{x}{y}$|$\log_{a}\cfrac{x}{y}=\log_{a}x-\log_{a}y $ |  
+| $k\log_ax=\log_ax^k$                      |     $\log_ax^k=k\log_ax$        |              
+|$\cfrac{1}{n}\log_ab=\log_{a^{n}}b$      |$\log_{a^{n}}b=\cfrac{1}{n}\log_ab$ |
+
+
+#### 💡Идея #1
+
+Сразу обратите внимание на логарифм $\log_ab$: не являются ли его основание $a$ и аргумент $b$ степенями одного и того же числа $c$? Если это так, то логарифм можно считать практически вычисленным.
+
+Например, $\log_{\frac{\sqrt{3}}{2}}\cfrac{64}{27}= \log_{\frac{\sqrt{3}}{2}}\left(\cfrac{2}{\sqrt{3}} \right)^6=-6$.
+
+
+
