add rational equations

--- a/docs/algebra/logarifm/doc1.mdx
+++ b/docs/algebra/logarifm/doc1.mdx
@@ -3,7 +3,7 @@ id: doc1
 title: Определение логарифма
 description: Определение логарифма, что такое логарифм
 pagination_prev: null
-slug: /opredelenie logarifma
+slug: /opredelenie-logarifma
 ---
 
 import Image from '@theme/IdealImage';
