--- a/docs/algebra/logarifm/doc2.mdx
+++ b/docs/algebra/logarifm/doc2.mdx
@@ -308,7 +308,107 @@ $2\lg 5 + \cfrac12 \lg 16 = \lg 25 + \lg 4 = \lg 100 =2$
 
 Сразу обратите внимание на логарифм $\log_ab$: не являются ли его основание $a$ и аргумент $b$ степенями одного и того же числа $c$? Если это так, то логарифм можно считать практически вычисленным.
 
+Наапример, $\log_{\frac94}\cfrac{8}{27} =\log_{\left(\frac32\right)^2}\left(\cfrac23\right)^3=-\cfrac32$
+
+
 Например, $\log_{\frac{\sqrt{3}}{2}}\cfrac{64}{27}= \log_{\frac{\sqrt{3}}{2}}\left(\cfrac{2}{\sqrt{3}} \right)^6=-6$.
 
 
 
+#### 💡Идея #2
+
+Если в упрощаемом выражении логарифм присутствует на "втором этаже" (то есть в показателе степени содержится логарифм), будьте готовы использовать основное логарифмическое тождество $a^{\log_ab}=b$.
+
+Вам могут встретится такие выражения, как $a^{\log_a^nx}$, $a^{\frac{\log_mx}{\log_ma}}$ или $a^{\frac{b}{\log_xa}}$.
+
+
+Для упрощения этих выражений примените следующее преобразование:
+$$
+a^{\log_a^nx}=\left(a^{\log_ax} \right)^{\log_a^{n-1}x}
+$$
+
+$$
+a^{\frac{\log_mx}{\log_ma}}=a^{\log_ax}
+$$ 
+
+$$
+a^{\frac{b}{\log_xa}}=a^{\log_ax^b}
+$$
+
+В частности, $a^{\log_a^2x}=\left(a^{\log_ax} \right)^{\log_ax}=x^{\log_ax}.$
+
+
+
+<Tabs>
+  <TabItem value="Пример 1" label="Пример №1" default>
+ Упростить выражение $(0.25)^{\cfrac{\log_{12}\log_8x}{\log_{\frac{1}{12}}4}}$
+
+ <Accordion>
+  <AccordionSummary
+    expandIcon={<ExpandMoreIcon />}
+    aria-controls="panel1a-content"
+    id="panel1a-header"
+  >
+    <Typography>
+      <b>Решение</b>
+    </Typography>
+  </AccordionSummary>
+  <AccordionDetails>
+    <Typography>
+
+$$
+\begin{gather*}
+(0.25)^{\frac{\log_{12}\log_8x}{\log_{\frac{1}{12}}4}} = \left(4^{-1}\right)^{\frac{\log_{12}\log_8x}{-\log_{12}4}}= \\
+\\
+= 4^{\frac{\log_{12}\log_8x}{\log_{12}4}} = 4^{\log_4\log_8x}= \log_8x \\
+\end{gather*}
+ $$
+
+   </Typography>
+  </AccordionDetails>
+</Accordion>
+
+  </TabItem>
+<TabItem value="Пример №2" label="Пример №2">
+   Упростить выражение $\left(2\cdot x^{1+\frac{1}{2\log_4x}}+4\cdot 2^{\frac{3}{\log_{x^2}8}}+1 \right)^{\frac12}-2x$
+<Accordion>
+  <AccordionSummary
+    expandIcon={<ExpandMoreIcon />}
+    aria-controls="panel1a-content"
+    id="panel1a-header"
+  >
+    <Typography>
+      <b>Решение</b>
+    </Typography>
+  </AccordionSummary>
+  <AccordionDetails>
+    <Typography>
+
+$\cfrac{\log_5{64}}{\log_54}=\log_464=3$
+    </Typography>
+  </AccordionDetails>
+</Accordion>
+  </TabItem>
+
+<TabItem value="Пример №3" label="Пример №3">
+   Вычислить $2\lg 5 + \cfrac12 \lg 16$.
+<Accordion>
+  <AccordionSummary
+    expandIcon={<ExpandMoreIcon />}
+    aria-controls="panel1a-content"
+    id="panel1a-header"
+  >
+    <Typography>
+      <b>Решение</b>
+    </Typography>
+  </AccordionSummary>
+  <AccordionDetails>
+    <Typography>
+
+$2\lg 5 + \cfrac12 \lg 16 = \lg 25 + \lg 4 = \lg 100 =2$
+    </Typography>
+  </AccordionDetails>
+</Accordion>
+  </TabItem>
+
+</Tabs>
